--- a/src/components/src/index.html
+++ b/src/components/src/index.html
@@ -21,13 +21,14 @@
   </style>
 </head>
 <body>
-
-  <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+  <q-title>Typography</q-title>
+  <q-title level="2">Typography</q-title>
+  <q-title>Grid syste</q-title>
   <q-grid class="gutter-8">
-    <q-column size-md="6" size-lg="4"><div class="box">Column</div></q-column>
-    <q-column size-md="6" size-lg="4"><div class="box">Column</div></q-column>
-    <q-column size-md="6" size-lg="4"><div class="box">Column</div></q-column>
-    <q-column size-md="6" size-lg="12"><div class="box">Column</div></q-column>
+    <q-grid-column size-md="6" size-lg="4"><div class="box">Column</div></q-grid-column>
+    <q-grid-column size-md="6" size-lg="4"><div class="box">Column</div></q-grid-column>
+    <q-grid-column size-md="6" size-lg="4"><div class="box">Column</div></q-grid-column>
+    <q-grid-column size-md="6" size-lg="12"><div class="box">Column</div></q-grid-column>
   </q-grid>
 
 </body>
