--- a/src/styles/scss/mixins/_variables.scss
+++ b/src/styles/scss/mixins/_variables.scss
@@ -1,3 +1,6 @@
+/**
+ * Grid system
+ */
 $_columns: 12;
 $_column-percent: 100 / $_columns;
 $_gutters: (4, 8, 12, 16, 20);
@@ -7,3 +10,7 @@ $_breakpoints: (
     md: 960px,
     lg: 1200px,
 );
+
+/**
+ * Typography
+ */
