--- a/src/styles/scss/mixins/_colors.scss
+++ b/src/styles/scss/mixins/_colors.scss
@@ -19,6 +19,24 @@ $_color-blackish: (
     'darker': hsl(0, 0, 3),
     'darkest': hsl(0, 0, 0),
 );
+$_color-primary: (
+    'lightest': hsl(195, 48, 95),
+    'lighter': hsl(195, 43, 86),
+    'light': hsl(195, 49, 70),
+    'normal': hsl(194, 60, 50),
+    'dark': hsl(195, 66, 38),
+    'darker': hsl(195, 70, 31),
+    'darkest': hsl(195, 85, 22),
+);
+$_color-secondary: (
+    'lightest': hsl(320, 21, 96),
+    'lighter': hsl(320, 25, 83),
+    'light': hsl(320, 25, 67),
+    'normal': hsl(320, 30, 50),
+    'dark': hsl(320, 33, 44),
+    'darker': hsl(320, 38, 31),
+    'darkest': hsl(320, 49, 24),
+);
 
 $_color-gray--lightest: map-get($_color-gray, 'lightest');
 $_color-gray--lighter: map-get($_color-gray, 'lighter');
@@ -36,13 +54,13 @@ $_color-blackish--dark: map-get($_color-blackish, 'dark');
 $_color-blackish--darker: map-get($_color-blackish, 'darker');
 $_color-blackish--darkest: map-get($_color-blackish, 'darkest');
 
-$_color-primary--lightest: #EFEEEA;
-$_color-primary--lighter: #EFEEEA;
-$_color-primary--light: #EFEEEA;
-$_color-primary--normal: #EFEEEA;
-$_color-primary--dark: #EFEEEA;
-$_color-primary--darker: #EFEEEA;
-$_color-primary--darkest: #EFEEEA;
+$_color-primary--lightest: map-get($_color-primary, 'lightest');
+$_color-primary--lighter: map-get($_color-primary, 'lighter');
+$_color-primary--light: map-get($_color-primary, 'light');
+$_color-primary--normal: map-get($_color-primary, 'normal');
+$_color-primary--dark: map-get($_color-primary, 'dark');
+$_color-primary--darker: map-get($_color-primary, 'darker');
+$_color-primary--darkest: map-get($_color-primary, 'darkest');
 
 $_color-success--lightest: #EFEEEA;
 $_color-success--lighter: #EFEEEA;
