--- a/src/styles/scss/_button.scss
+++ b/src/styles/scss/_button.scss
@@ -1,120 +1,88 @@
 @import "mixins/variables";
 @import "mixins/typography";
 @import "mixins/colors";
+@import "mixins/button";
 
 $_button-spacing: 24px;
 $_button-height: 40px;
 $_button-border-radius: 4px;
 $_button-max-width: 320px;
+$_button-focus-shadow-size: 4px;
 
 button,
 input[type=button],
 .button {
-    align-items: center;
-    background: $_color-gray--normal;
-    border: 1px solid $_color-gray--normal;
-    border-radius: $_button-border-radius;
-    color: $_color-blackish--normal;
-    display: inline-flex;
-    height: $_button-height;
-    margin: 0;
-    max-width: $_button-max-width;
-    padding: 0 $_button-spacing;
-    position: relative;
-    transition: .2s;
-    user-select: none;
-    text-transform: none;
-    -webkit-appearance: button;
-    
-    @include font($_font-size-base, 0, 400, 1);
-    
-    &:active,
-    &.active {
-        background-color: $_color-gray--dark;
-    }
-
-    &:hover,
-    &.hovered {
-        background-color: $_color-gray--light;
-        border: 1px solid $_color-gray--light;
-    }
-
-    &:focus,
-    &.focused {
-        box-shadow: 0 0 0 2px $_color-gray--light; // rewrite to shadows
-        outline: none;
-    }
-
-    &:disabled,
-    &.disabled {
-        background-color: $_color-gray--lighter;
-        border: 1px solid $_color-gray--lighter;
-        color: $_color-blackish--lightest;
-        cursor: not-allowed !important;
-    }
-
-    & > span {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-    }
-
-    &--ghost {
-        background-color: transparent;
-        border: 1px solid $_color-gray--light;
-
-        &:disabled,
-        &.disabled {
-            background-color: transparent;
-            color: $_color-gray--darker;
-        }
-
-        &:hover:not(:disabled) {
-            background-color: transparent;
-            border: 1px solid $_color-gray--dark;
-        }
-    }
-
-    &--flat {
-        background-color: transparent;
-        border: 1px solid transparent;
-
-        &[disabled],
-        &.disabled {
-            background-color: transparent;
-            border: 1px solid transparent;
-            color: $_color-gray--darker;
-        }
-
-        &:hover:not([disabled]) {
-            background-color: $_color-gray--lightest;
-            border: 1px solid $_color-gray--lightest;
-        }
-    }
+    @include base-button((
+        'border-radius': 4px,
+        'horizontal-spacing': 24px,
+        'shadow-size': 4px,
+    ), (
+        'background': transparent,
+        'color': $_color-blackish--normal,
+        'disabled__color': $_color-gray--normal,
+        'hover__background': $_color-gray--lightest,
+        'focus__background': transparent,
+        'focus__shadow-color': $_color-gray--light
+    ), (
+        'background': transparent,
+        'border': $_color-gray--light,
+        'color': $_color-blackish--normal,
+        'disabled__background': transparent,
+        'disabled__color': $_color-gray--darker,
+        'focus__shadow-color': $_color-gray--light,
+        'hover__background': transparent,
+        'hover__border-color': $_color-gray--darkest
+    ));
 }
 
 button[type=submit],
-button.primary {
-    background: $_color-primary--normal;
-    border: 1px solid $_color-primary--normal;
-    color: $_color-blackish--normal;
+input[type=submit],
+button.button--primary {
+    @include base-button((
+        'border-radius': 4px,
+        'horizontal-spacing': 24px,
+        'shadow-size': 4px,
+    ), (
+        'background': $_color-primary--normal,
+        'color': $_color-white,
+        'disabled__color': $_color-gray--normal,
+        'hover__background': $_color-primary--light,
+        'focus__background': $_color-primary--dark,
+        'focus__shadow-color': $_color-primary--lighter
+    ), (
+        'background': transparent,
+        'border': $_color-primary--light,
+        'color': $_color-primary--normal,
+        'disabled__background': transparent,
+        'disabled__color': $_color-gray--darker,
+        'focus__shadow-color': $_color-primary--lighter,
+        'hover__background': transparent,
+        'hover__border-color': $_color-primary--dark
+    ));
+}
 
-    &:active,
-    &.active {
-        background-color: $_color-primary--dark;
-    }
-
-    &:hover,
-    &.hovered {
-        background-color: $_color-primary--light;
-        border: 1px solid $_color-primary--light;
-    }
-
-    &:focus,
-    &.focused {
-        background-color: $_color-primary--dark;
-        border: 1px solid $_color-primary--dark;
-        box-shadow: 0 0 0 2px $_color-primary--lighter;
-        outline: none;
-    }
+button[type=reset],
+input[type=reset],
+button.button--danger {
+    @include base-button((
+        'border-radius': 4px,
+        'horizontal-spacing': 24px,
+        'shadow-size': 4px,
+    ), (
+        'background': $_color-danger--normal,
+        'color': $_color-white,
+        'disabled__color': $_color-gray--normal,
+        'hover__background': $_color-danger--light,
+        'focus__background': $_color-danger--dark,
+        'focus__shadow-color': $_color-danger--lighter
+    ), (
+        'background': transparent,
+        'border': $_color-danger--light,
+        'color': $_color-danger--normal,
+        'disabled__background': transparent,
+        'disabled__color': $_color-gray--darker,
+        'focus__shadow-color': $_color-danger--lighter,
+        'hover__background': transparent,
+        'hover__border-color': $_color-danger--dark
+    ));
 }
