--- a/src/styles/scss/mixins/_colors.scss
+++ b/src/styles/scss/mixins/_colors.scss
@@ -20,14 +20,23 @@ $_color-blackish: (
     'darkest': hsl(0, 0, 0),
 );
 $_color-primary: (
-    'lightest': hsl(195, 48, 95),
-    'lighter': hsl(195, 43, 86),
-    'light': hsl(195, 49, 70),
-    'normal': hsl(194, 60, 50),
-    'dark': hsl(195, 66, 38),
-    'darker': hsl(195, 70, 31),
-    'darkest': hsl(195, 85, 22),
+    'lightest': hsl(190, 34, 95),
+    'lighter': hsl(190, 34, 79),
+    'light': hsl(190, 42, 52),
+    'normal': hsl(190, 45, 45),
+    'dark': hsl(190, 50, 39),
+    'darker': hsl(190, 55, 30),
+    'darkest': hsl(190, 55, 21),
 );
+// $_color-primary: (
+//     'lightest': hsl(195, 48, 95),
+//     'lighter': hsl(195, 43, 86),
+//     'light': hsl(195, 49, 70),
+//     'normal': hsl(194, 60, 50),
+//     'dark': hsl(195, 66, 38),
+//     'darker': hsl(195, 70, 31),
+//     'darkest': hsl(195, 85, 22),
+// );
 $_color-secondary: (
     'lightest': hsl(320, 21, 96),
     'lighter': hsl(320, 25, 83),
@@ -36,6 +45,24 @@ $_color-secondary: (
     'dark': hsl(320, 33, 44),
     'darker': hsl(320, 38, 31),
     'darkest': hsl(320, 49, 24),
+);
+$_color-success: (
+    'lightest': hsl(84, 56, 95),
+    'lighter': hsl(84, 62, 78),
+    'light': hsl(84, 68, 55),
+    'normal': hsl(84, 99, 40),
+    'dark': hsl(84, 97, 34),
+    'darker': hsl(84, 97, 23),
+    'darkest': hsl(84, 100, 10),
+);
+$_color-danger: (
+    'lightest': hsl(357, 66, 95),
+    'lighter': hsl(357, 75, 81),
+    'light': hsl(357, 81, 69),
+    'normal': hsl(357, 68, 50),
+    'dark': hsl(357, 74, 43),
+    'darker': hsl(357, 83, 34),
+    'darkest': hsl(357, 100, 23),
 );
 
 $_color-gray--lightest: map-get($_color-gray, 'lightest');
@@ -70,13 +97,13 @@ $_color-success--dark: #EFEEEA;
 $_color-success--darker: #EFEEEA;
 $_color-success--darkest: #EFEEEA;
 
-$_color-danger--lightest: #EFEEEA;
-$_color-danger--lighter: #EFEEEA;
-$_color-danger--light: #EFEEEA;
-$_color-danger--normal: #EFEEEA;
-$_color-danger--dark: #EFEEEA;
-$_color-danger--darker: #EFEEEA;
-$_color-danger--darkest: #EFEEEA;
+$_color-danger--lightest: map-get($_color-danger, 'lightest');
+$_color-danger--lighter: map-get($_color-danger, 'lighter');
+$_color-danger--light: map-get($_color-danger, 'light');
+$_color-danger--normal: map-get($_color-danger, 'normal');
+$_color-danger--dark: map-get($_color-danger, 'dark');
+$_color-danger--darker: map-get($_color-danger, 'darker');
+$_color-danger--darkest: map-get($_color-danger, 'darkest');
 
 $_color-warning--lightest: #EFEEEA;
 $_color-warning--lighter: #EFEEEA;
