--- a/src/components/src/index.html
+++ b/src/components/src/index.html
@@ -29,11 +29,11 @@
       <q-grid-column size="8" push="2">
           <q-title>Button</q-title>
           <q-button>Default button</q-button>
-          <q-button role="primary" html-type="true">Primary action</q-button>
+          <q-button role="primary" html-type>Primary action</q-button>
           <q-button role="danger">Destructive action</q-button>
           <q-title level="2">Ghost button</q-title>
           <q-button ghost="true">Default button</q-button>
-          <q-button ghost="true" role="primary">Primary action</q-button>
+          <q-button ghost="true" role="primary" html-type>Primary action</q-button>
           <q-button ghost="true" role="danger">Destructive action</q-button>
           <q-title>Typography</q-title>
           <q-paragraph>
