--- a/src/components/src/index.html
+++ b/src/components/src/index.html
@@ -32,9 +32,9 @@
           <q-button role="primary" html-type>Primary action</q-button>
           <q-button role="danger">Destructive action</q-button>
           <q-title level="2">Ghost button</q-title>
-          <q-button ghost="true">Default button</q-button>
-          <q-button ghost="true" role="primary" html-type>Primary action</q-button>
-          <q-button ghost="true" role="danger">Destructive action</q-button>
+          <q-button ghost>Default button</q-button>
+          <q-button ghost role="primary" html-type>Primary action</q-button>
+          <q-button ghost role="danger">Destructive action</q-button>
           <q-title>Typography</q-title>
           <q-paragraph>
               Vestibulum hendrerit habitasse tristique faucibus nisl neque felis proin etiam gravida et parturient dictumst a mi nam at parturient viverra fermentum ullamcorper a ac. Parturient non suspendisse a aliquam vestibulum consectetur a parturient curabitur consectetur tincidunt hendrerit a molestie a ornare habitasse cubilia. A a justo id dictumst massa vestibulum viverra volutpat enim mauris suspendisse donec nisi suspendisse blandit vestibulum dapibus ridiculus elit.
